--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">爱安卓</string>
-    
+
     //状态提示
     <string name="loading">加载中</string>
     <string name="error">出错啦!</string>
     <string name="reload">重新加载</string>
     <string name="empty">这里什么都没有</string>
-    
+
     //导航栏
     <string name="tab_home">首页</string>
     <string name="tab_knowledge_system">知识体系</string>
@@ -23,4 +23,7 @@
     <string name="drawer_nav_setting">设置</string>
     <string name="drawer_nav_about_us">关于我们</string>
     <string name="drawer_header_username">用户名</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
