--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="tab_knowledge_system">知识体系</string>
     <string name="tab_wx_article">公众号</string>
     <string name="tab_navigation">导航</string>
-    <string name="tab_project">导航</string>
+    <string name="tab_project">项目</string>
 
     //Toolbar菜单
     <string name="website">常用网站</string>
@@ -23,6 +23,9 @@
     <string name="drawer_nav_setting">设置</string>
     <string name="drawer_nav_about_us">关于我们</string>
     <string name="drawer_header_username">用户名</string>
+
+    //首页文章
+    <string name="article_top">置顶</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
