--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="reload">重新加载</string>
     <string name="empty">这里什么都没有</string>
     <string name="network_error">网络异常,请检查网络</string>
+    <string name="exit_app_prompt">再按一次退出应用</string>
 
     //导航栏
     <string name="tab_home">首页</string>
@@ -44,7 +45,7 @@
     <string name="login_success">登录成功</string>
     <string name="register_success">注册成功</string>
     <string name="prompt">提示</string>
-    <string name="is_logout">是否退出登录</string>
+    <string name="is_logout">是否退出登录?</string>
     <string name="sure_logout">退出</string>
     <string name="cancel">取消</string>
     <string name="email_psw_not_empty">邮箱或密码不能为空</string>
